testsuite/tests/v1/block_expr/non_unit_body_elem/test.out
Error: Ignored expression
   ╭─[ <working-dir>/script.lkql:3:5 ]
   │
 3 │     1 + x;
   │     ──┬──  
   │       ╰──── Cannot ignore a non-unit expression in a block expression body
───╯
